syntax = "proto3";

package v1.config;

option go_package = "github.com/accuknox/knoxAutoPolicy/protos/v1/config";

// CRUD: Create / Read / Update / Delete

service ConfigStore {
    rpc Add (ConfigRequest) returns (ConfigResponse);
    rpc Get (ConfigRequest) returns (ConfigResponse);
    rpc Update (ConfigRequest) returns (ConfigResponse);
    rpc Delete (ConfigRequest) returns (ConfigResponse);

    rpc Apply (ConfigRequest) returns (ConfigResponse);
}

message ConfigRequest {
    string name = 1;
    Config config = 3;
}

message ConfigResponse {
    string msg = 1;
    repeated Config config = 2;
}

message ConfigDB {
    string db_driver = 1;
    string db_host = 2;
    string db_port = 3;
    string db_user = 4;
    string db_pass = 5;
    string db_name = 6;

    string table_network_flow = 7;
    string table_discovered_policy = 8;
}

message ConfigCiliumHubble {
    string hubble_url = 1;
    string hubble_port = 2;
}

message IgnoringFlows {
    repeated string ig_selector_namespaces = 1;
    repeated string ig_selector_labels = 2;
    repeated string ig_target_namespaces = 3;
    repeated string ig_target_labels = 4;
    repeated string ig_protocols = 5;
    repeated string ig_port_numbers = 6;
}

message Config {
    string config_name = 1;
    int32 staus = 2;

    ConfigDB config_db = 3;
    ConfigCiliumHubble config_cilium_hubble = 4;

    int32 operation_mode = 5;
    string cronjob_time_interval = 6;
    string one_time_job_time_selection = 7;

    string network_log_from = 8;
    string discovered_policy_to = 9;
    string policy_dir = 10;

    int32 discovery_policy_types = 11;
    int32 discovery_rule_types = 12;

    int32 cidr_bits = 13;
    repeated IgnoringFlows ignoring_flows = 14;

    int32 l3_aggregation_level = 15;
    int32 l4_aggregation_level = 16;
    int32 l7_aggregation_level = 17;
    int32 http_url_threshold = 18;
}